Fixed UI bug overflow

--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,5 +1,5 @@
 #about{
-  padding: var(--padding-section);
+  padding: 5rem 0;
   min-height: 80vh;
   box-shadow: var(--box-shadow-section);
 }
@@ -39,7 +39,7 @@
   .about-info p{
     transition: transform 0.2s ease-in-out;
     margin: 0;
-    font-size: 1.5rem;
+    font-size: clamp(1rem, 1.5vw, 1.5rem);
 
     animation: scaleText linear;
     animation-timeline: view();
@@ -146,12 +146,6 @@
   }
 }
 
-@media screen and (max-width: 620px) {
-  .about-container{
-    border-radius: 0%;
-    margin: 1rem 0;
-  } 
-}
 
 @media screen and (max-width: 500px) {
   .about-info, .about-info span{
@@ -168,6 +162,9 @@
   .about-paragraph{
   padding: 3rem .5rem;
   border-radius: 0;
-  /* background: linear-gradient(141.7deg, #5272ff1e  60%, rgba(129, 130, 145, 0.473) 89%); */
+}
+
+.about-paragraph p:nth-child(2){
+  display: none;
 }
 }
